rsi divergence detection removed

--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "c1d12c18",
+   "id": "3a12081b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,17 +21,17 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "0ea7c3ca",
+   "id": "da9474e4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = DataHandler().fetch('BTCUSDT').iloc[:-1]"
+    "data = DataHandler().fetch('BTCUSDT') "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "30bc448f",
+   "id": "eb87c041",
    "metadata": {},
    "outputs": [
     {
@@ -64,7 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "ce80e0ef",
+   "id": "c8df6453",
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "230c7418",
+   "id": "50f19204",
    "metadata": {},
    "outputs": [
     {
@@ -110,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "13f94615",
+   "id": "74cf64d8",
    "metadata": {},
    "outputs": [
     {
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43f6e364",
+   "id": "5ee1f08c",
    "metadata": {},
    "outputs": [],
    "source": []
